# butterfly

./: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  style.css
.github/workflows/: build.yml
api/: assignments.js  login-webview.js  login.js  overview.js  proxy-init.js  proxy.js  timetable.js
assignments/: index.html
grades/: index.html
login-webview/: index.html
schedule/: index.html
server/: index.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
