[package]
name        = "butterfly"
version     = "1.0.0"
description = "Minimal Pronote client powered by Pawnote"
authors     = ["Elouan Grimm"]
edition     = "2021"
rust-version = "1.77.2"

[lib]
name       = "butterfly_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell       = "2"
tauri-plugin-notification = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
url                      = "2"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
